feat: adicionei um texto novo

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, illo
+      ducimus. Non tempore dolorem quasi iste! Corporis eaque voluptatibus
+      provident, debitis voluptates qui ut et tempora animi labore neque nihil?
+    </p>
   </body>
 </html>
