feat: adicionei um novo botão

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
       ducimus. Non tempore dolorem quasi iste! Corporis eaque voluptatibus
       provident, debitis voluptates qui ut et tempora animi labore neque nihil?
     </p>
+
+    <button>Click</button>
   </body>
 </html>
